# kronosdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/kronosdb-bench/: Cargo.toml
crates/kronosdb-bench/benches/: append_throughput.rs  bloom_filter.rs  concurrent_read_write.rs  group_commit.rs  scale_behavior.rs  source_cached_vs_cold.rs  source_read.rs  throughput_sustained.rs
crates/kronosdb-bench/src/: lib.rs
crates/kronosdb-eventstore/: Cargo.toml  build.rs
crates/kronosdb-eventstore/src/: api.rs  append.rs  cache.rs  context.rs  criteria.rs  error.rs  event.rs  lib.rs  metrics.rs  query.rs  snapshot.rs  store.rs  stream.rs  tag.rs
crates/kronosdb-eventstore/src/index/: mod.rs  tag_index.rs
crates/kronosdb-eventstore/src/raft/: cluster.rs  log_store.rs  mod.rs  network.rs  state_machine.rs  transport.rs  types.rs
crates/kronosdb-eventstore/src/segment/: format.rs  mod.rs  reader.rs  segment_index.rs  writer.rs
crates/kronosdb-eventstore/tests/: cluster_test.rs
crates/kronosdb-messaging/: Cargo.toml
crates/kronosdb-messaging/src/: api.rs  client.rs  command.rs  engine.rs  error_codes.rs  handler.rs  lib.rs  manager.rs  query.rs  subscription.rs  types.rs
crates/kronosdb-raft/: Cargo.toml  build.rs
crates/kronosdb-raft/src/: cluster.rs  lib.rs  log_store.rs  network.rs  node.rs  state_machine.rs  transport.rs  types.rs
crates/kronosdb-raft/tests/: cluster_test.rs
crates/kronosdb-server/: Cargo.toml  build.rs
crates/kronosdb-server/src/: auth.rs  config.rs  main.rs  processor.rs  proto.rs
crates/kronosdb-server/src/admin/: layout.rs  mod.rs  templates.rs
crates/kronosdb-server/src/admin/console/: clients.rs  cluster.rs  commands.rs  contexts.rs  events.rs  mod.rs  overview.rs  processors.rs  queries.rs  settings.rs  subscriptions.rs
crates/kronosdb-server/src/eventstore/: mod.rs  service.rs  snapshot_service.rs
crates/kronosdb-server/src/messaging/: command_service.rs  mod.rs  query_service.rs
crates/kronosdb-server/src/platform/: service.rs
proto/: command.proto  common.proto  eventstore.proto  platform.proto  query.proto  raft.proto  snapshot.proto
