[workspace]
resolver = "2"
members = [
    "crates/kronosdb-eventstore",
    "crates/kronosdb-messaging",
    "crates/kronosdb-raft",
    "crates/kronosdb-server",
    "crates/kronosdb-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/theoem/kronosdb"
