[package]
name = "kronosdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kronosdb-eventstore = { path = "../kronosdb-eventstore" }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[package.metadata.release]
release = false

# --- Storage engine benchmarks ---

[[bench]]
name = "append_throughput"
harness = false

[[bench]]
name = "source_read"
harness = false

[[bench]]
name = "source_cached_vs_cold"
harness = false

[[bench]]
name = "bloom_filter"
harness = false

[[bench]]
name = "concurrent_read_write"
harness = false

[[bench]]
name = "scale_behavior"
harness = false

[[bench]]
name = "group_commit"
harness = false

[[bench]]
name = "throughput_sustained"
harness = false
