[package]
name = "kronosdb-eventstore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32c = "0.6"
memmap2 = "0.9"
libc = "0.2"
roaring = "0.10"
parking_lot = "0.12"
growable-bloom-filter = "2"
bincode = "1"
serde = "1"
tokio = { version = "1", features = ["sync"] }
lru = "0.14"

[dev-dependencies]
tempfile = "3"
