[package]
name = "kronosdb-eventstore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32c = "0.6"
memmap2 = "0.9"
libc = "0.2"
roaring = "0.10"
parking_lot = "0.12"
growable-bloom-filter = "2"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = "0.1"
lru = "0.14"

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tonic = "0.13"
prost = "0.13"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.13", features = ["transport"] }
