[package]
name = "kronosdb-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kronosdb-eventstore = { path = "../kronosdb-eventstore" }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
parking_lot = "0.12"
tracing = "0.1"
tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-stream = "0.1"
