[package]
name = "kronosdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kronosdb-eventstore = { path = "../kronosdb-eventstore" }
kronosdb-messaging = { path = "../kronosdb-messaging" }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.13"
